--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "AR_VR_practicum.sln"
+    "dotnet.defaultSolution": "AR_VR_practicum-2024.sln"
 }
