--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,8 @@
     "com.unity.timeline": "1.5.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.6.1",
+    "com.unity.xr.arcore": "4.1.13",
+    "com.unity.xr.management": "4.4.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
